cors implementation test